# novita-cli

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: api.rs  cli.rs  main.rs  prompt.rs
